# uatu

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: renovate.json
.github/workflows/: ci.yml  release-prepare.yml  release-publish.yml
src/: capture.rs  config.rs  db.rs  events.rs  identity.rs  lib.rs  liveness.rs  lock.rs  main.rs  oplog.rs  prompt.rs  reconcile.rs  redact.rs  report.rs  sample_config_test.toml  state.rs  util.rs
src/commands/: configure.rs  flush.rs  inspect.rs  maintain.rs  mod.rs  run.rs
tests/: cli_basic.rs  configure.rs  lifecycle.rs  reporting.rs
tests/common/: mod.rs
