[package]
name = "uatu"
version = "0.1.1-alpha.2"
edition = "2021"
license = "Apache-2.0"
description = "Observe cron jobs without replacing cron: wrap commands, keep history, get alerts"
repository = "https://github.com/almeidx/uatu"
keywords = ["cron", "monitoring", "observability", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "hostname", "tokio1", "tokio1-rustls-tls"] }
libc = "0.2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3"
tokio = { version = "1", features = ["rt", "time"] }
toml = "1.1.2"
ulid = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
