[package]
name = "uatu"
version = "0.1.1-alpha.5"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
description = "Observe cron jobs without replacing cron: wrap commands, keep history, get alerts"
repository = "https://github.com/almeidx/uatu"
keywords = ["cron", "monitoring", "observability", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
inquire = { version = "0.9.4", default-features = false, features = ["crossterm", "fuzzy"] }
jiff = "0.2.32"
lettre = { version = "0.11.22", default-features = false, features = ["smtp-transport", "builder", "hostname", "tokio1", "tokio1-rustls", "ring", "webpki-roots"] }
libc = "0.2.186"
rand = "0.10.2"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
signal-hook = "0.4.4"
tokio = { version = "1.52.3", features = ["rt", "time"] }
toml = "1.1.3"
ulid = "2.0.1"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = true
strip = true
